// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryEngine: actions query clear 1`] = `
Object {
  "type": "CLEAR_QUERY",
}
`;

exports[`QueryEngine: actions query failure 1`] = `
Object {
  "error": "ERROR",
  "type": "EXECUTE_QUERY_FAILURE",
}
`;

exports[`QueryEngine: actions query remove 1`] = `
Object {
  "queryType": "gaslim",
  "type": "REMOVE_QUERY",
}
`;

exports[`QueryEngine: actions query request 1`] = `
Object {
  "chainId": "ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9",
  "query": Object {
    "last": 15,
  },
  "resourceType": "/block",
  "type": "EXECUTE_QUERY_REQUEST",
}
`;

exports[`QueryEngine: actions query success 1`] = `
Object {
  "queryResult": Array [
    Object {
      "blockData": Object {
        "coinbase": "3647a6e2de89072d3e6d2e17981f59dfa5e1c388",
        "difficulty": 787006,
        "extraData": "",
        "gasLimit": 6.306924869595101e+117,
        "gasUsed": 0,
        "kind": "BlockData",
        "mixHash": "0000000000000000000000000000000000000000000000000000000000000000",
        "nonce": 1898998817641056,
        "number": 203929,
        "parentHash": "317515ecf9d224fb33ce1b5b083e3e6d257e8465b57bba2d4a77a660cd746258",
        "receiptsRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
        "stateRoot": "ff3a85c425bc7fbe55ae86f8d8debbe3f72cb279ed327b2fd65c865a9cddf289",
        "timestamp": "2017-12-28T06:37:06Z",
        "transactionsRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
        "unclesHash": "1dcc4de8dec75d7aab85b567b6ccd41ad312451b948a7413f0a142fd40d49347",
      },
      "blockUncles": Array [],
      "kind": "Block",
      "next": "",
      "receiptTransactions": Array [],
    },
    Object {
      "blockData": Object {
        "coinbase": "b02fb2003f14b50d361c61e2cb35ac73294f573d",
        "difficulty": 786622,
        "extraData": "",
        "gasLimit": 6.30077177216135e+117,
        "gasUsed": 0,
        "kind": "BlockData",
        "mixHash": "0000000000000000000000000000000000000000000000000000000000000000",
        "nonce": 587690020353918,
        "number": 203928,
        "parentHash": "6b0d460f77ef51a592ed4342696910ec51ad893b131ed82227a58b64cc2ba8d7",
        "receiptsRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
        "stateRoot": "78f6fd95ac2d5f03abc0bc78e6ceab3b50cca90bdbb88ba4e8a92edeb8349649",
        "timestamp": "2017-12-28T06:37:00Z",
        "transactionsRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
        "unclesHash": "1dcc4de8dec75d7aab85b567b6ccd41ad312451b948a7413f0a142fd40d49347",
      },
      "blockUncles": Array [],
      "kind": "Block",
      "next": "",
      "receiptTransactions": Array [],
    },
    Object {
      "blockData": Object {
        "coinbase": "1d0fa93990303125aff8c7cf03a498c89293536c",
        "difficulty": 787006,
        "extraData": "",
        "gasLimit": 6.294624677749485e+117,
        "gasUsed": 0,
        "kind": "BlockData",
        "mixHash": "0000000000000000000000000000000000000000000000000000000000000000",
        "nonce": 3782737246921370,
        "number": 203927,
        "parentHash": "6d3868c9928a2274d96619c5db99037a82019270097422aec93b7b3dfc329906",
        "receiptsRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
        "stateRoot": "9315c48f192014b96f6c3a48cca70ead4605589e23abf088d0f41f2fbf607cd2",
        "timestamp": "2017-12-28T06:36:10Z",
        "transactionsRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
        "unclesHash": "1dcc4de8dec75d7aab85b567b6ccd41ad312451b948a7413f0a142fd40d49347",
      },
      "blockUncles": Array [],
      "kind": "Block",
      "next": "",
      "receiptTransactions": Array [],
    },
    Object {
      "blockData": Object {
        "coinbase": "c40cbf36e3b69bf462de5030fe84b4ceccd12317",
        "difficulty": 787390,
        "extraData": "",
        "gasLimit": 6.2884835805029e+117,
        "gasUsed": 0,
        "kind": "BlockData",
        "mixHash": "0000000000000000000000000000000000000000000000000000000000000000",
        "nonce": 2010878899709881,
        "number": 203926,
        "parentHash": "95e4ec7dc217dfbebed4e920f61acb867f454c8a472ec68aec6790d558c631d6",
        "receiptsRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
        "stateRoot": "751d2bf168006f1b9027bf7edacfa986d2f79e8b0608e23406a44032385b2902",
        "timestamp": "2017-12-28T06:35:55Z",
        "transactionsRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
        "unclesHash": "1dcc4de8dec75d7aab85b567b6ccd41ad312451b948a7413f0a142fd40d49347",
      },
      "blockUncles": Array [],
      "kind": "Block",
      "next": "",
      "receiptTransactions": Array [],
    },
    Object {
      "blockData": Object {
        "coinbase": "1d0fa93990303125aff8c7cf03a498c89293536c",
        "difficulty": 786239,
        "extraData": "",
        "gasLimit": 6.221325654417749e+117,
        "gasUsed": 0,
        "kind": "BlockData",
        "mixHash": "0000000000000000000000000000000000000000000000000000000000000000",
        "nonce": 690470270600278,
        "number": 203915,
        "parentHash": "372534306a03639831d0a1a100c9dbefd3515cf215235e527d1554899f60296a",
        "receiptsRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
        "stateRoot": "ff8aed690661d71e50c20ad5366c2f92c6134534dcaf40a584c1750402d96d09",
        "timestamp": "2017-12-28T06:33:21Z",
        "transactionsRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
        "unclesHash": "1dcc4de8dec75d7aab85b567b6ccd41ad312451b948a7413f0a142fd40d49347",
      },
      "blockUncles": Array [],
      "kind": "Block",
      "next": "",
      "receiptTransactions": Array [],
    },
  ],
  "type": "EXECUTE_QUERY_SUCCESS",
}
`;

exports[`QueryEngine: actions query update 1`] = `
Object {
  "queryTerm": 144,
  "queryType": "gaslim",
  "type": "UPDATE_QUERY",
}
`;
